microsoft-edge/edgehtml/devtools-protocol/0.1/clients.md
---
description: Microsoft Edge devtools Protocol, Version 0,1, unterstützt die folgenden Tooling-Clients.
title: DevTools-Protokoll Version 0,1-Clients (EdgeHTML)
author: MSEdgeTeam
ms.author: msedgedevrel
ms.topic: reference
ms.prod: microsoft-edge
ms.custom: seodec18
ms.date: 12/02/2020
ROBOTS: NOINDEX,NOFOLLOW
ms.openlocfilehash: cb7355524ec6dab5cf0275538c5b0c030891d4a9
ms.sourcegitcommit: a35a6b5bbc21b7df61d08cbc6b074b5325ad4fef
ms.translationtype: MT
ms.contentlocale: de-DE
ms.lasthandoff: 12/17/2020
ms.locfileid: "11233651"
---
# <span data-ttu-id="091ac-103">DevTools-Protokoll Version 0,1-Clients (EdgeHTML)</span><span class="sxs-lookup"><span data-stu-id="091ac-103">DevTools Protocol Version 0.1 Clients (EdgeHTML)</span></span>  

> [!NOTE]
> <span data-ttu-id="091ac-104">Das Microsoft Edge devtools-Protokoll funktioniert nur unter [Windows 10 April 2018-Update](https://blogs.windows.com/windowsexperience/2018/04/30/how-to-get-the-windows-10-april-2018-update/#5VXkQMU41CJzZPER.97) und später [Windows Insider Preview](https://insider.windows.com/en-us/getting-started/) -Builds.</span><span class="sxs-lookup"><span data-stu-id="091ac-104">The Microsoft Edge DevTools Protocol works only on [Windows 10 April 2018 Update](https://blogs.windows.com/windowsexperience/2018/04/30/how-to-get-the-windows-10-april-2018-update/#5VXkQMU41CJzZPER.97) and later [Windows Insider Preview](https://insider.windows.com/en-us/getting-started/) builds.</span></span>

<span data-ttu-id="091ac-105">Das **devtools-Protokoll 0,1** unterstützt die folgenden Tooling-Clients.</span><span class="sxs-lookup"><span data-stu-id="091ac-105">**DevTools Protocol 0.1** supports the following tooling clients.</span></span>

<span data-ttu-id="091ac-106">[ ![ Microsoft Edge devtools Preview](../media/microsoft-edge-devtools.png)](#microsoft-edge-devtools-preview) [ ![ Microsoft Visual Studio 15,7 Preview 2](../media/visual-studio-2017.png)](#microsoft-visual-studio-preview)</span><span class="sxs-lookup"><span data-stu-id="091ac-106">[![Microsoft Edge DevTools Preview](../media/microsoft-edge-devtools.png)](#microsoft-edge-devtools-preview) [![Microsoft Visual Studio 15.7 Preview 2](../media/visual-studio-2017.png)](#microsoft-visual-studio-preview)</span></span>

## <span data-ttu-id="091ac-107">Microsoft Edge DevTools-Vorschau</span><span class="sxs-lookup"><span data-stu-id="091ac-107">Microsoft Edge DevTools Preview</span></span>

<span data-ttu-id="091ac-108">Sie können die eigenständige [**Microsoft Edge devtools Preview**](https://www.microsoft.com/store/p/microsoft-edge-devtools-preview/9mzbfrmz0mnj?activetab=pivot%3aoverviewtab) Windows 10-App aus dem Microsoft Store zum Remotedebuggen eines Hostgeräts mit Microsoft Edge ([EdgeHTML 17](../../dev-guide/index.md) oder höher) verwenden.</span><span class="sxs-lookup"><span data-stu-id="091ac-108">You can use the standalone [**Microsoft Edge DevTools Preview**](https://www.microsoft.com/store/p/microsoft-edge-devtools-preview/9mzbfrmz0mnj?activetab=pivot%3aoverviewtab) Windows 10 app from the Microsoft Store to remotely debug a host device running Microsoft Edge ([EdgeHTML 17](../../dev-guide/index.md) or later).</span></span>

<span data-ttu-id="091ac-109">Diese vorläufige Version 0,1 Version des devtools-Protokolls bietet grundlegende Debugfunktionen wie das Festlegen von Haltepunkten, das Durchlaufen von Code und das Untersuchen von Stapelablaufverfolgungen.</span><span class="sxs-lookup"><span data-stu-id="091ac-109">This preliminary Version 0.1 release of the DevTools Protocol provides core debugging functionality, such as setting breakpoints, stepping through code, and exploring stack traces.</span></span> <span data-ttu-id="091ac-110">In der Benutzeroberfläche von Edge devtools wird dadurch die Funktionalität übersetzt, die im [**Debuggerfenster**](../../devtools-guide/debugger.md) zur Verfügung steht, minus Cache Überprüfung (für Web Storage, Service Worker, Cache-API und IndexedDB).</span><span class="sxs-lookup"><span data-stu-id="091ac-110">In the Edge DevTools UI, this translates to functionality available in the [**Debugger**](../../devtools-guide/debugger.md) panel, minus cache inspection (for Web storage, Service worker, Cache API, and IndexedDB).</span></span> <span data-ttu-id="091ac-111">Derzeit ist das Microsoft Edge-Remotedebuggen auf Desktop Hosts mit Unterstützung für andere Windows 10-Geräte in zukünftigen Versionen limitiert.</span><span class="sxs-lookup"><span data-stu-id="091ac-111">Currently Microsoft Edge remote debugging is limited to desktop hosts, with support for other Windows 10 devices coming in future releases.</span></span>

<span data-ttu-id="091ac-112">Hier erfahren Sie, wie Sie das Remotedebuggen mit der Microsoft Edge devtools Preview-App einrichten.</span><span class="sxs-lookup"><span data-stu-id="091ac-112">Here's how to set up remote debugging with the Microsoft Edge DevTools Preview app.</span></span> <span data-ttu-id="091ac-113">Das devtools-Protokoll befindet sich in Preview und erfordert [Windows 10 April 2018-Update](https://blogs.windows.com/windowsexperience/2018/04/30/how-to-get-the-windows-10-april-2018-update/#5VXkQMU41CJzZPER.97) oder einen späteren Windows Insider Preview-Build auf dem Host-Computer (debugee).</span><span class="sxs-lookup"><span data-stu-id="091ac-113">The DevTools Protocol is in preview and requires [Windows 10 April 2018 Update](https://blogs.windows.com/windowsexperience/2018/04/30/how-to-get-the-windows-10-april-2018-update/#5VXkQMU41CJzZPER.97) or a later Windows Insider Preview build on the host (debugee) machine.</span></span> <span data-ttu-id="091ac-114">Die Edge devtools Preview-app (auf dem Debugger-Computer verwendet) wird im Fall Creators Update (Version 1709) und Windows Insider Preview-Builds ausgeführt.</span><span class="sxs-lookup"><span data-stu-id="091ac-114">The Edge DevTools Preview app (used on the debugger machine) will run on Fall Creators Update (version 1709) and Windows Insider Preview builds.</span></span>

**<span data-ttu-id="091ac-115">Auf dem Hostcomputer (debugee)...</span><span class="sxs-lookup"><span data-stu-id="091ac-115">On the host (debugee) machine...</span></span>**

1. <span data-ttu-id="091ac-116">Wenn Sie ein WLAN-Netzwerk haben, stellen Sie sicher, dass das Netzwerk entweder als " **Domäne** " oder " **Privat**" gekennzeichnet ist.</span><span class="sxs-lookup"><span data-stu-id="091ac-116">If you're on a WiFi network, ensure the network is marked as either **Domain** or **Private**.</span></span> <span data-ttu-id="091ac-117">Sie können dies überprüfen, indem Sie die [**Windows Defender-Sicherheits Center**](/windows/security/threat-protection/windows-defender-security-center/windows-defender-security-center) -APP öffnen, auf **Firewall & Netzwerkschutz** klicken und überprüfen, ob Ihr Netzwerk als *Domänennetzwerk* oder *privates Netzwerk*aufgeführt ist.</span><span class="sxs-lookup"><span data-stu-id="091ac-117">You can verify this by opening the [**Windows Defender Security Center**](/windows/security/threat-protection/windows-defender-security-center/windows-defender-security-center) app, clicking on **Firewall & network protection** and checking if your network is listed as a *Domain network* or *Private network*.</span></span> 

    <span data-ttu-id="091ac-118">Wenn die Liste als *öffentlich*aufgeführt ist, wechseln Sie zu **Einstellungen**  >  **Netzwerk & Internet**  >  **WLAN**, klicken Sie auf Ihr Netzwerk, und schalten Sie die Schaltfläche *Netzwerkprofil* auf **Privat**.</span><span class="sxs-lookup"><span data-stu-id="091ac-118">If its listed as *Public*, go to **Settings** > **Network & Internet** > **Wi-Fi**, click on your network and toggle the *Network profile* button to **Private**.</span></span>

2. <span data-ttu-id="091ac-119">Öffnen Sie die Systemsteuerung **für Entwickler** unter Windows- *Einstellungen* (suchen Sie nach *Entwickler* , und klicken Sie auf *Entwicklerfeatures verwenden*) und:</span><span class="sxs-lookup"><span data-stu-id="091ac-119">Open the **For developers** control panel in Windows *Settings* (search for *developer* and click on *Use developer features*), and:</span></span> 

    <span data-ttu-id="091ac-120">a.</span><span class="sxs-lookup"><span data-stu-id="091ac-120">a.</span></span> <span data-ttu-id="091ac-121">Wechseln Sie im **Entwicklermodus**.</span><span class="sxs-lookup"><span data-stu-id="091ac-121">Toggle on **Developer Mode**.</span></span> <span data-ttu-id="091ac-122">Dadurch wird das *Entwicklermodus* -Paket installiert, das Remotetools für Desktops ermöglicht.</span><span class="sxs-lookup"><span data-stu-id="091ac-122">This will install the *Developer Mode* package, enabling remote tooling for desktop.</span></span>

    <span data-ttu-id="091ac-123">b.</span><span class="sxs-lookup"><span data-stu-id="091ac-123">b.</span></span> <span data-ttu-id="091ac-124">Aktivieren des [**Geräte Portals**](/windows/uwp/debug-test-perf/device-portal) (Aktivieren der*Remote Diagnose über lokale Netzwerkverbindungen*) und **Geräteerkennung** (*machen Sie Ihr Gerät für USB-Verbindungen und Ihr lokales Netzwerk sichtbar*).</span><span class="sxs-lookup"><span data-stu-id="091ac-124">Enable [**Device Portal**](/windows/uwp/debug-test-perf/device-portal) (*Turn on remote diagnostics over local area network connections*) and **Device discovery** (*Make your device visible to USB connections and your local network*).</span></span>

    <span data-ttu-id="091ac-125">c.</span><span class="sxs-lookup"><span data-stu-id="091ac-125">c.</span></span> <span data-ttu-id="091ac-126">Aktivieren Sie die **Authentifizierung** , und geben Sie einen Benutzernamen/ein Kennwort ein.</span><span class="sxs-lookup"><span data-stu-id="091ac-126">Turn on **Authentication** and supply a username / password.</span></span>

    <span data-ttu-id="091ac-127">d.</span><span class="sxs-lookup"><span data-stu-id="091ac-127">d.</span></span> <span data-ttu-id="091ac-128">Beachten Sie, dass die IP-Adresse des Computers und der Verbindungsanschluss (50443) angezeigt werden.</span><span class="sxs-lookup"><span data-stu-id="091ac-128">Note the machine IP address and connection port (50443) displayed.</span></span>

3. <span data-ttu-id="091ac-129">Öffnen Sie die Registerkarten in Microsoft Edge, die Sie auf dem Clientcomputer debuggen möchten.</span><span class="sxs-lookup"><span data-stu-id="091ac-129">Open tabs in Microsoft Edge that you wish to debug from the client machine.</span></span>

**<span data-ttu-id="091ac-130">Auf dem Clientcomputer (Debugger)...</span><span class="sxs-lookup"><span data-stu-id="091ac-130">On the client (debugger) machine...</span></span>**

1.  <span data-ttu-id="091ac-131">Installieren und starten Sie die eigenständige [Microsoft Edge devtools Preview](https://www.microsoft.com/store/p/microsoft-edge-devtools-preview/9mzbfrmz0mnj?activetab=pivot%3aoverviewtab) -App aus dem Microsoft Store.</span><span class="sxs-lookup"><span data-stu-id="091ac-131">Install and launch the standalone [Microsoft Edge DevTools Preview](https://www.microsoft.com/store/p/microsoft-edge-devtools-preview/9mzbfrmz0mnj?activetab=pivot%3aoverviewtab) app from the Microsoft Store.</span></span>

2. <span data-ttu-id="091ac-132">Öffnen Sie den Bereich **Remote** , und geben Sie den Netzwerkspeicherort (URL und Port) des Hostcomputers ein, und klicken Sie auf **verbinden**.</span><span class="sxs-lookup"><span data-stu-id="091ac-132">Open the **Remote** panel and enter the network location (URL and port) of the host machine and click **Connect**.</span></span>

3. <span data-ttu-id="091ac-133">**Installieren** Sie das Zertifikat des Hostcomputers aus dem Dialogfeld "nicht *vertrauenswürdiges Zertifikat* ", das angezeigt wird.</span><span class="sxs-lookup"><span data-stu-id="091ac-133">**Install** the host machine's certificate from the *Untrusted Certificate* dialog that appears.</span></span>

4. <span data-ttu-id="091ac-134">Geben Sie den Benutzernamen/das Kennwort an, den Sie für die Geräte Portal Authentifizierung festgelegt haben.</span><span class="sxs-lookup"><span data-stu-id="091ac-134">Supply the username/password you designated for Device Portal authentication.</span></span>

5. <span data-ttu-id="091ac-135">Das *Remote* Panel lädt eine Liste von debugfähigen-Seiten Zielen auf dem Hostcomputer.</span><span class="sxs-lookup"><span data-stu-id="091ac-135">The *Remote* panel will load a list of debuggable page targets on the host machine.</span></span> <span data-ttu-id="091ac-136">Wählen Sie eine aus, um mit dem Debuggen zu beginnen.</span><span class="sxs-lookup"><span data-stu-id="091ac-136">Select one to start debugging.</span></span>

6. <span data-ttu-id="091ac-137">Verwenden Sie die Schaltfläche **Aktualisieren** , um die Liste der Remote Seiten Ziele auf dem Hostcomputer zu aktualisieren und neu zu laden.</span><span class="sxs-lookup"><span data-stu-id="091ac-137">Use the **Refresh** button to update and reload the list of remote page targets on the host machine.</span></span> <span data-ttu-id="091ac-138">Klicken Sie auf die Schaltfläche " **trennen** ", um zum Bildschirm "mit *einem Remotegerät verbinden* " zurückzukehren und an einen anderen Host anzufügen.</span><span class="sxs-lookup"><span data-stu-id="091ac-138">Click the **Disconnect** button to return to the *Connect to a remote device* screen and attach to a different host.</span></span>

## <span data-ttu-id="091ac-139">Microsoft Visual Studio Preview</span><span class="sxs-lookup"><span data-stu-id="091ac-139">Microsoft Visual Studio Preview</span></span>

<span data-ttu-id="091ac-140">Mit dem neuesten [**Visual Studio Preview**](https://www.visualstudio.com/vs/preview/) -Build (Visual Studio 15,7 Preview 1 oder höher) können Sie Microsoft Edge in einem beliebigen ASP.net-oder .net Core-Projekt in der IDE starten und Debuggen.</span><span class="sxs-lookup"><span data-stu-id="091ac-140">Using the latest [**Visual Studio Preview**](https://www.visualstudio.com/vs/preview/) build (Visual Studio 15.7 Preview 1 or later), you can launch and debug Microsoft Edge from the IDE on any ASP.NET or .NET Core project.</span></span> <span data-ttu-id="091ac-141">Das devtools-Protokoll befindet sich derzeit in der Vorschau und erfordert, dass Sie einen [Windows Insider Preview](https://insider.windows.com/en-us/getting-started/) -Build ausführen.</span><span class="sxs-lookup"><span data-stu-id="091ac-141">The DevTools Protocol is currently in preview and requires you to be running a [Windows Insider Preview](https://insider.windows.com/en-us/getting-started/) build.</span></span>

<span data-ttu-id="091ac-142">Hier erfahren Sie, wie Sie Microsoft Edge-Debuggen mit Visual Studio einrichten:</span><span class="sxs-lookup"><span data-stu-id="091ac-142">Here's how to set up Microsoft Edge debugging with Visual Studio:</span></span>

1.  <span data-ttu-id="091ac-143">Installieren und starten Sie den neuesten [**Visual Studio Preview**](https://www.visualstudio.com/vs/preview/) -Build (Visual Studio 15,7 Preview 1 oder höher).</span><span class="sxs-lookup"><span data-stu-id="091ac-143">Install and launch the latest [**Visual Studio Preview**](https://www.visualstudio.com/vs/preview/) build (Visual Studio 15.7 Preview 1 or later).</span></span>

2. <span data-ttu-id="091ac-144">Öffnen Sie ein vorhandenes ASP.net-oder .net Core-Projekt, oder erstellen Sie ein **Neues Projekt** , indem Sie eine der **Visual C#** .net-Vorlagen verwenden.</span><span class="sxs-lookup"><span data-stu-id="091ac-144">Open an existing ASP.NET or .NET Core project or **Create new project...** using one of the **Visual C#** .NET templates.</span></span>

3. <span data-ttu-id="091ac-145">Öffnen Sie im Projekt **Mappen-Explorer**die JavaScript-Dateien, die Sie debuggen möchten, und setzen Sie Haltepunkte in der IDE genauso wie bei serverseitigem Code.</span><span class="sxs-lookup"><span data-stu-id="091ac-145">In the project **Solution Explorer**, open the JavaScript files you wish to debug and set breakpoints within the IDE just as you would with server-side code.</span></span>

4. <span data-ttu-id="091ac-146">Drücken Sie `F5` zum Starten von Microsoft Edge, auf dem der devtools-Server ausgeführt wird.</span><span class="sxs-lookup"><span data-stu-id="091ac-146">Press `F5` to launch Microsoft Edge running the DevTools Server.</span></span> <span data-ttu-id="091ac-147">Wenn ein Haltepunkt erreicht ist, brechen Sie in Visual Studio ab und können den Code von dort aus weiter überprüfen und durchlaufen.</span><span class="sxs-lookup"><span data-stu-id="091ac-147">When a breakpoint is hit, you'll break into Visual Studio and can further inspect and step through the code from there.</span></span>
